<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#4E2C78"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp" />

    <TextView
        android:id="@+id/weclome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/Weclome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Add a class"
            android:textAlignment="center"
            android:textSize="20sp" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <EditText
            android:id="@+id/editClassID"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="Enter New Class ID"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="Class Date (YYYY-MM-DD)"
            android:inputType="date"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTime"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="Class Time (00:00:00)"
            android:inputType="time"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editSpots"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="Spots Available"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="Location Address"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editCTID"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="Class Type ID"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editInstID"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="Instructor ID"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/AddClassButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/AddClassButton" />

        <Button
            android:id="@+id/GoMainButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/GoMain" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>